--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body class="has-background-dark Cantarell">
     <!-- HEADER !-->
     <div
-      class="navbar py-4 px-4 has-shadow is-white has-text-small media has-background-grey-light"
+      class="navbar py-4 px-4 has-shadow is-white has-text-small has-background-grey-light"
       role="navigation"
     >
       <div class="container">
@@ -39,7 +39,7 @@
             />
           </a>
         </div>
-        <div class="media level-right">
+        <div>
           <a
             class="navbar-burger"
             id="burger"
@@ -74,16 +74,16 @@
         <div class="is-child box">
           <p class="title ml-2" id="nav-about">How to Use Our Site</p>
           <p class="subtitle py-3">
-            Enter any City, State or Country in the search bar. The weather for that location will
-         appear directly below. If the area has had any seismic activity recently a red circle
-         will be displayed. The size of the circle relates to the magnitude of the most recent earthquake.
-         The larger the circle - the bigger the earthquake in that location.
+            Enter any City, State or Country in the search bar. The weather for
+            that location will appear directly below. If the area has had any
+            seismic activity recently a red circle will be displayed. The size
+            of the circle relates to the magnitude of the most recent
+            earthquake. The larger the circle - the bigger the earthquake in
+            that location.
           </p>
         </div>
         <!-- Search Form -->
-        <div
-          class="tile is-7 is-vertical is-child box is-size-5 py-6 my-6 is-inline-touch"
-        >
+        <div class="tile is-7 is-vertical is-child box is-size-5 py-6 my-6">
           <p class="title ml-5" id="nav-search">Search</p>
           <div class="field is-grouped" id="search-form">
             <div class="control has-icons-left ml-5">
@@ -130,9 +130,7 @@
     </div>
     <!-- FOOTER-->
     <div class="has-background-grey-light">
-      <footer
-        class="footer title ml-5 py-6 my-6 is-inline-touch has-background-grey-light"
-      >
+      <footer class="footer title ml-5 py-6 my-6 has-background-grey-light">
         <div class="content has-text-centered">
           <div class="py-3" id="nav-contact">
             <a href="mailto:contact@moversnotshakers.com"
